--- a/style.css
+++ b/style.css
@@ -10,3 +10,84 @@ License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: my_custom_theme
 Tags: accessibility-ready, responsive-layout, custom-background, custom-logo, custom-menu, featured-images, threaded-comments
 */
+
+
+/* Sidebar */
+body {
+  position: relative;
+}
+
+.sidebar-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 250px;
+  overflow-x: hidden;
+  z-index: 1000;
+  transition: transform 0.3s;
+  transform: translateX(-100%);
+}
+
+.sidebar-visible .sidebar-container {
+  transform: translateX(0);
+}
+
+
+#sidebar {
+  position: fixed;
+  left: -250px;
+  top: 0;
+  bottom: 0;
+  width: 250px;
+  background-color: #f0f0f0;
+  z-index: 1000;
+  transition: left 0.3s;
+}
+
+#sidebar-menu {
+  display: block;
+}
+
+#sidebar-toggle {
+  position: fixed;
+  left: 10px;
+  top: 10px;
+  width: 50px;
+  height: 50px;
+  background-color: #34db5e;
+  color: #ff0000;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  z-index: 1001;
+}
+
+
+.sidebar-visible #sidebar {
+  left: 0;
+}
+
+
+  
+/* Header */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #3498db; /* Change to your desired header background color */
+  color: #fff;
+}
+
+header h1 {
+  margin: 0;
+  padding-left: 10px;
+}
+
+
+
+
+  /* Footer */
+
+  /* Blog */
+ 
