--- a/style.css
+++ b/style.css
@@ -165,8 +165,9 @@ main {
 
   /* Footer */
   footer {
+    font-family: Arial, Helvetica, sans-serif;
     padding: 10px; /* Add some padding for better appearance */
-    text-align: center; /* Center the text within the footer */
+    text-align: center; 
     background-color: #21BFBF;
     color: #000000;
   }
