--- a/style.css
+++ b/style.css
@@ -122,12 +122,14 @@ main {
 }
 
 .block-1-image {
-  flex: 1;
-  /* Add background image or insert <img> element */
-  background-color: #47bebe; /* Replace with background-image if needed */
-  height: 200px;
+  width: 100%;
+  max-width: 50%;
+  height: 300px; /* Adjust this value to your desired height */
+  background-size: cover;
+  background-position: center;
   border-radius: 10px;
 }
+
 
 /* Block 2 */
 .block-2 {
@@ -152,16 +154,16 @@ main {
   background-color: #21BFBF;
   padding: 20px;
   margin: 0;
+  overflow: visible;
 }
 
 .block-3-image {
   width: 100%;
-  height: 300px;
-  /* Add background image or insert <img> element */
-  background-color:#47bebe; /* Replace with background-image if needed */
+  height: 300px; /* Adjust this value to your desired height */
+  background-size: cover;
+  background-position: center;
   border-radius: 10px;
 }
-
 
   /* Footer */
   footer {
