--- a/style.css
+++ b/style.css
@@ -311,13 +311,50 @@ main {
   /* Blog */
 
   .blog-container article {
-    margin: 20px;
+    margin: 30px;
     margin-bottom: 50px;
   }
   
   .single-post .entry-title {
     text-align: center;
   }
+  
+  .post-thumbnail {
+    width: 50%;
+    margin: 0 auto;
+  }
+  
+  .post-thumbnail img {
+    width: 50%;
+    height: auto;
+    object-fit: cover;
+  }
+  
+
+  .single-post .post-thumbnail {
+    width: 50%;
+    margin: 0 auto 20px;
+  }
+  
+  .single-post .post-thumbnail img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  
+  @media (min-width: 1200px) {
+    .single-post .entry-content p {
+      max-width: 7in;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  
+  .comments-container {
+    margin: 0 auto;
+    max-width: 6in;
+  }
+  
   
 
   /* Hyperlinks */
