--- a/style.css
+++ b/style.css
@@ -343,8 +343,8 @@ main {
 /* Blog */
 
 .blog-container article {
-  margin: 0;
-  margin-bottom: 0;
+  margin: 20px;
+  margin-bottom: 30px;
 }
 
 .single-post .entry-title {
@@ -425,11 +425,11 @@ main {
   }
   
 
-  /* Projects */
+ /* Projects */
 .projects-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column; /* Make the projects stack vertically */
+  align-items: center; /* Center the projects */
   gap: 20px;
   padding: 20px;
 }
@@ -438,7 +438,7 @@ main {
   background-color: #f9f9f9;
   border-radius: 5px;
   padding: 20px;
-  width: 300px;
+  width: 330px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   position: relative;
 }
